--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#d62e49" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Task Meadow - Your personal productivity hub for tracking workouts, habits, and daily tasks. Achieve your goals with our beautiful, intuitive interface."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Task Meadow - Your Personal Productivity Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
